# chinese_chess

./: README.md  pyproject.toml
src/: cchess.py
src/XQlightPy/: play_against_ai.py
src/cchess_app/: __main__.py  actions.py  ai.py  app.py  config.py  dependencies.py  launcher.py  pieces.py  state.py  ui_board.py  ui_controls.py  utils.py  voice.py
src/cchess_gui.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
