[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cchess-gui"
version = "0.1.0"
description = "Chinese Chess (Xiangqi) GUI with optional AI and voice input"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "SpeechRecognition>=3.10.0",
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
ai = ["numpy>=1.24.0"]

[project.scripts]
cchess = "cchess_app.launcher:main"

[tool.setuptools.packages.find]
where = ["src"]
